# chatbot

./: README.md
chatbot-backend/: .gitignore  README.md  package-lock.json  package.json  pyproject.toml
chatbot-backend/database/: embeddings.ipynb  functions.py  ref.code-workspace
chatbot-backend/src/: main.py
chatbot-frontend/: README.md  package-lock.json  package.json
chatbot-frontend/public/: index.html
chatbot-frontend/src/: App.vue
chatbot-frontend/src/router/: index.js
chatbot-frontend/src/views/: AskMePage.vue  LoginPage.vue
